--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,7 @@
 @layer base {
   /* inter var - latin */
   @font-face {
-    font-family: 'Inter';
+    font-family: 'Calibri';
     font-style: normal;
     font-weight: 100 900;
     font-display: optional;
